Created and completed DAO

--- a/ProjectWebsite/ProjectWebsite.csproj
+++ b/ProjectWebsite/ProjectWebsite.csproj
@@ -10,4 +10,13 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
+    <Folder Include="wwwroot\css\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectViewModels\ProjectViewModels.csproj" />
+  </ItemGroup>
+
 </Project>
