Added bootstrap and finished javascript

--- a/ProjectWebsite/ProjectWebsite.csproj
+++ b/ProjectWebsite/ProjectWebsite.csproj
@@ -8,10 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ProjectDAL\ProjectDAL.csproj" />
     <ProjectReference Include="..\ProjectViewModels\ProjectViewModels.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
 
 </Project>
